[package]
name = "tasktide"
version = "1.3.0"
edition = "2021"
authors = ["TaskTide Contributors"]
description = "A modern, lightweight task management solution built with Rust"
readme = "README.md"
license = "MIT"
repository = "https://github.com/yourusername/tasktide"
keywords = ["task-manager", "process-management", "windows", "gui", "productivity"]
categories = ["gui", "os::windows-apis"]

[dependencies]
iced = { version = "0.10.0", features = ["image", "tokio"] }
sysinfo = "0.29"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
image = "0.24"
winapi = { version = "0.3", features = ["winuser", "shellapi", "commctrl", "processthreadsapi", "handleapi", "errhandlingapi", "winbase"] }
windows = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Memory",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
] }
num_cpus = "1.16.0"
enigo = "0.1.2"

[build-dependencies]
winres = "0.1"